文件互斥访问+前端文件